# glowing-robot

./: .gitignore  CLAUDE.md  README.md
backend/: Dockerfile  Dockerfile.prod  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: api_key.py  eval_report.py  job.py  mission.py  user.py
backend/app/routes/: auth.py  evals.py  jobs.py  missions.py
backend/app/services/: auth.py  eval_service.py  job_runner.py  storage.py
docs/: architecture.md
evals/metrics/: compute.py
evals/reports/: generator.py
infra/: .env.example  .env.prod.example  docker-compose.prod.yml  docker-compose.yml  nginx.conf
robot_api/parsers/: __init__.py  bag_parser.py  csv_parser.py  json_parser.py
robot_api/schemas/: trajectory.py
scripts/: bag_info.py  demo_compare.py  demo_replay.py  deploy.sh  dev.sh  reset_db.py  test_parsers.py
sim/environments/: README.md
sim/replay/: engine.py
sim/scenarios/: warehouse_basic.json  warehouse_collision.json
webapp/: Dockerfile  index.html  package.json  vite.config.ts
webapp/src/: App.tsx  main.tsx
webapp/src/components/: JobStatus.tsx  Nav.tsx  ReplayViewer.tsx
webapp/src/lib/: api.ts  auth.tsx
webapp/src/pages/: ComparePage.tsx  LoginPage.tsx  MissionDetailPage.tsx  MissionsPage.tsx  RegisterPage.tsx  SettingsPage.tsx  UploadPage.tsx
